# legalyze-interview

./: README.md  main.py  pyproject.toml  requirements.txt
